# clstrfck

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  SCRATCHPAD
apps/miner/: __init__.py  chunk.py  dedupe.py  embed.py  entities.py  extract.py  ingest.py  normalize.py  utils.py
apps/rag-soup/: .gitignore  README.md  config.yaml
apps/rag-soup/policies/: mode_A_synthesize.txt  mode_B_compare.txt  mode_C_report_only.txt
apps/repo-sweep/: README.md  repo_sweep.sh
apps/rlhf-maker/: pyproject.toml
atzmo/: macos_system_poc.py  requirements.txt
atzmo/browser_container/: Dockerfile  launch_browser.py
configs/: mining.local.example.yaml
data/: README.md
docs/: architecture.md  mining-prep.md
embedding_experiments_1/cluster_embeddings/: README.md  index_code_snippets.py
fiber/: landmark_1.md
libs/atzmo/: README.md  pyproject.toml
libs/clusterkit/: pyproject.toml
projects/data-mining/rag-soup/: pyproject.toml
projects/data-mining/rag-soup/references/: TAXONOMY.md  bibliography.bib  resources.yaml
projects/data-mining/rag-soup/references/tests/: test_resources_yaml.py
projects/data-mining/rag-soup/src/rag_soup/: cluster_label.py  context_envelope.py  fusion.py  orchestrator.py  rerank.py
projects/data-mining/rag-soup/templates/: dataset_card_template.yaml
projects/data-mining/rag-soup/tests/: test_mine_dump.py
tests/: test_cluster_chats_basic.py  test_index_code_snippets.py
tools/: chat_conversation_viewer_single_page_tool.html  readme_chat_conversation_viewer_single_page_tool.md  xcode_cli_tools_installer.py
(+21 files in other folders)
